# TIAO-2026

./: .gitignore  PROGRESS.md  README.md
2TIAO/ENTERPRISE CHALLENGE/: .dockerignore  Makefile  README.md  docker-compose.yml  pyproject.toml
2TIAO/ENTERPRISE CHALLENGE/document/: governanca_e_riscos.md
2TIAO/ENTERPRISE CHALLENGE/scripts/: etl_limpeza_textract.py
2TIAO/ENTERPRISE CHALLENGE/src/backend/: .env.example  Dockerfile  README.md  main.py  requirements.txt
2TIAO/ENTERPRISE CHALLENGE/src/backend/agents/: __init__.py  graph.py  state.py
2TIAO/ENTERPRISE CHALLENGE/src/backend/agents/nodes/: __init__.py  generate.py  guardrail.py  retrieve.py  sanitize.py
2TIAO/ENTERPRISE CHALLENGE/src/backend/api/routes/: chat.py
2TIAO/ENTERPRISE CHALLENGE/src/backend/core/: config.py  llm.py
2TIAO/ENTERPRISE CHALLENGE/src/backend/domain/: schemas.py
2TIAO/ENTERPRISE CHALLENGE/src/backend/eval/: __init__.py  __main__.py  cases.py  criteria.py  runner.py
2TIAO/ENTERPRISE CHALLENGE/src/backend/prompts/: __init__.py  base.py  specialists.py
2TIAO/ENTERPRISE CHALLENGE/src/backend/services/: guardrails.py  pii_redaction.py  vector_store.py
2TIAO/ENTERPRISE CHALLENGE/src/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  tailwind.config.js
2TIAO/ENTERPRISE CHALLENGE/src/frontend/src/: App.jsx  index.css
2TIAO/Global-Solution-1/: README.md  arthur_plano_orbital_rag.md
2TIAO/Global-Solution-1/orbital-rag-data/: .gitignore  Makefile  main.py  pyproject.toml
2TIAO/Global-Solution-1/orbital-rag-data/collectors/: donki_collector.py  neo_collector.py
2TIAO/Global-Solution-1/orbital-rag-data/output/: context_data.json
2TIAO/Global-Solution-1/orbital-rag-data/processors/: normalizer.py
(+33 files in other folders)
