[tool.poetry]
name = "orbital-rag-data"
version = "0.1.0"
description = "Pipeline de coleta e normalização de dados espaciais para o Orbital RAG"
authors = ["Arthur"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "2.31.0"
python-dotenv = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
